<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="#fff"
              android:minWidth="400dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/message"
        android:textSize="25dp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--Google官方推荐的输入信息的时候的输入框外层(有提示和动画)-->

    <android.support.design.widget.TextInputLayout
        android:layout_margin="10dp"
        android:id="@+id/user_name_wrapper"
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_name"
            android:hint="@string/hint_user_name"
            android:layout_width="match_parent"
            android:inputType="text"
            android:maxLength="10"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/password"
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="18"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#fff"
        android:visibility="gone"
        android:text="@string/login"
        android:textColor="@color/colorAccent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/register"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/background_register"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>